# stm32mp157_workspace

./: CMakeLists.txt  STM32F429NIHx_FLASH.ld  build.sh
APP/inc/: LED.h  main.h  stm32mp15xx_disco.h  stm32mp15xx_disco_errno.h
APP/src/: LED.c  main.c  stm32f4xx_it.c  stm32mp1xx_it.c
BSP/inc/: USART_COM.h  bsp.h  ringbuffer.h
BSP/src/: USART_COM.c  bsp.c
STM32MP1xx_HAL_Driver/: CMakeLists.txt  README.md  Release_Notes.html
STM32MP1xx_HAL_Driver/Inc/: stm32mp1xx_hal_qspi.h  stm32mp1xx_hal_smbus.h  stm32mp1xx_hal_usart.h  stm32mp1xx_hal_usart_ex.h  stm32mp1xx_ll_ipcc.h  stm32mp1xx_ll_tim.h
STM32MP1xx_HAL_Driver/Src/: stm32mp1xx_hal_cryp.c  stm32mp1xx_hal_cryp_ex.c  stm32mp1xx_hal_qspi.c  stm32mp1xx_hal_smbus.c  stm32mp1xx_hal_usart.c  stm32mp1xx_hal_usart_ex.c  stm32mp1xx_hal_wwdg.c
gcc/: startup_stm32mp151axx_cm4.s  startup_stm32mp151cxx_cm4.s  startup_stm32mp153axx_cm4.s  startup_stm32mp153cxx_cm4.s  startup_stm32mp157axx_cm4.s  startup_stm32mp157cxx_cm4.s
gcc/linker/: stm32mp15xx_m4.ld
newlib/: syscalls.c
